--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
         </div>
     </header>
 
+    <div class="headerSectionTwo">
+
+        <div class="HeaderNavDiv">
+
+            <nav>
+                <ul>
+                    <li> <a href=""></a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="HeaderIconSection"></div>
+    </div>
+
     <div class="bodysectionstart">
 
         <div class="bodysecLeft"></div>
