--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <!--Header Section Starts-->
     
     <header>
 
@@ -26,18 +27,33 @@
         </div>
     </header>
 
+    <!--Header Section Ends -->
+
+    <!--Header Section Two Starts-->
     <div class="headerSectionTwo">
 
         <div class="HeaderNavDiv">
 
             <nav>
                 <ul>
-                    <li> <a href=""></a></li>
+                    <li> <a href="">Project</a></li>
+                    <li> <a href="">News</a></li>
+                    <li> <a href="">Contests</a></li>
+                    <li> <a href="">Events</a></li>
+                    <li> <a href="">Videos</a></li>
+                    <li> <a href="">Workshops</a></li>
                 </ul>
             </nav>
         </div>
-        <div class="HeaderIconSection"></div>
+        <div class="HeaderIconSection">
+
+
+        </div>
     </div>
+
+    <!--Header Section Two Ends-->
+
+    <!--Body Section Start-->
 
     <div class="bodysectionstart">
 
