--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
         <div class="HeaderIconSection">
 
+           
 
         </div>
     </div>
@@ -58,7 +59,11 @@
     <div class="bodysectionstart">
 
         <div class="bodysecLeft"></div>
-        <div class="bodysectRight"></div>
+        <div class="bodysectRight">
+
+            <div class="bodysectRightTop"></div>
+            <div class="bodysectRightBottom"></div>
+        </div>
     </div>
 </body>
 </html>
